Need to figure out a bug when collapsing the project

--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -60,7 +60,7 @@
 }
 
 .edieVideo {
-    display: flex;
+    display: none;
 }
 
 .expandProject {
